@@ -60,23 +60,27 @@
             </configuration>
         </plugin>
         <plugin>
+            <groupId>org.codehaus.gmavenplus</groupId>
+            <artifactId>gmavenplus-plugin</artifactId>
+            <version>1.6.2</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>addTestSources</goal>
+                        <goal>compileTests</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M5</version>
             <configuration>
-                <argLine>
-                    --illegal-access=permit
-                </argLine>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>3.0.0-M5</version>
-            <configuration>
-                <argLine>
-                    --illegal-access=permit
-                </argLine>
+                <includes>
+                    <include>**/*Test.java</include>
+                    <include>**/*Spec.java</include>
+                </includes>
             </configuration>
         </plugin>
     </plugins>
